--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -73,7 +73,7 @@ import Sti from "../components/Sti.astro";
         flex-direction: column;
         gap: 24px;
 
-      padding-bottom: var(--gap7);
+        padding-bottom: var(--gap7);
     }
 
     .text h3 {
@@ -113,7 +113,7 @@ import Sti from "../components/Sti.astro";
     .artister a {
         background-color: var(--color-background-button-secondary);
         outline-style: solid;
-        outline-color: var(--color-background-button-hover);
+        outline-color: var(--color-background-button-secondary-stroke);
         outline-width: 2px;
         color: var(--color-background-button-hover);
     }
@@ -127,53 +127,36 @@ import Sti from "../components/Sti.astro";
     }
 
     @media (min-width: 1513px){
-
-    .artister {
-		column-gap: var(--gap11);
-	}
-    }
+      .artister {
+        column-gap: var(--gap11);
+      }
+}
 
     @media (max-width: 1450px){
-.artister {
-    column-gap: var(--gap11);
+      .artister {
+        column-gap: var(--gap11);
+      }
 }
-    }
 
     @media (max-width: 1024px) {
-        .artister{
+      article {
+        padding-inline: var(--gap6);
+      }
+      .artister{
         display: grid;
         grid-template-columns: 1fr 1fr;
-    
     }
-    h1{
-      font-size: var(--Headline1-medium);
-      padding-left: 0rem;
-    }
-
-    h3{
-      font-size: var(--Headline3-medium);
-      padding-left: 0rem;
-    }
-    }
+}
 
     @media (max-width: 430px) {
-    h1{
-      font-size: var(--Headline1-small);
-      padding-left: 0rem;
-    
-    }
-
-    h3{
-      font-size: var(--Headline4-small);
-      padding-left: 0rem;
-    }
-
-    article {
-    padding-inline: var(--gap5);
-  }
-
-  .artister {
-    column-gap: var(--gap3);
+      article {
+        padding-inline: var(--gap4);
+      }
+      .artister {
+        column-gap: var(--gap3);
+      }
+      a {
+        font-size: var(--Label-small);
+      }
 }
-    }
 </style>
