--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -22,7 +22,7 @@ import Button from "../components/Button.astro";
       Lad os gøre jeres næste arrangement til en uforglemmelig oplevelse!</p>
       </div>
       <div class="button">
-      <Button size="lg" link="/booking" variant="secondary">Læs mere</Button>
+      <Button size="lg" link="/kontakt" variant="secondary">Læs mere</Button>
       </div>
   </div>
   <img src="/img/uffe_holm.webp" alt="">
@@ -171,6 +171,7 @@ import Button from "../components/Button.astro";
   .indhold {
     height: auto;
     border-right: none;
+    width: 100%;
   }
 
   .button {
@@ -183,13 +184,13 @@ import Button from "../components/Button.astro";
   }
   }
 
-  @media (max-width: 391px) {
+  @media (max-width: 430px) {
     article{
 		padding-inline: var(--gap4);
 	}
 
   .tekst > * {
-    width: 22rem;
+    width: 20rem;
   }
   }
 </style>
