--- a/src/components/SocialIcon.astro
+++ b/src/components/SocialIcon.astro
@@ -12,12 +12,12 @@
     }
 .social-links{
     display: flex;
-flex-direction: row;
-justify-content: center;
+    flex-direction: row;
+    justify-content: center;
+    gap: var(--gap4);
 }
     .social-links a {
       color: var(--color-icon-some);
-      padding: 0.5rem;
     }
 
     .social-links a:hover{
