--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -115,6 +115,7 @@
   --gap6: 1.875rem;
   --gap7: 2.1875rem;
   --gap8: 2.5rem;
+  --gap9: 50px;
   --gap11: 4.375rem;
   --gap12: 6.25rem;
   --gap13: 7.5rem;
