--- a/src/components/EventCard.astro
+++ b/src/components/EventCard.astro
@@ -144,7 +144,7 @@ console.log("props",Astro.props)
     .price {
         display: flex;
         width: 7.29169rem;
-        padding: 0.52081rem;
+        padding: 0.32081rem;
         justify-content: center;
         align-items: center;
         gap: 1.97919rem;
@@ -174,14 +174,13 @@ console.log("props",Astro.props)
         display: none;
     }
 
-    .udsolgt .billede {
-        width: 20rem;
-        height: 20rem;
+    .udsolgt img {
         filter: blur(2px);
     }
 
     .udsolgt .tekst {
         color: var(--color-background-body);
+        font-family: "Inter", sans-serif;
         font-size: 3rem;
         font-weight: 800;
         background-color: var(--color-card-sold-out);
@@ -192,12 +191,14 @@ console.log("props",Astro.props)
         justify-content: center;
         align-items: center;
         position: absolute;
-        top: 25%;
-        left: 10%;
+        top: 30%;
+        left: 20%;
+        z-index: 1;
     }
 
     .faatilbage .tilbage {
         color: var(--color-card-text-few-left);
+        font-family: "Inter", sans-serif;
         font-size: var(--Label-large);
         font-style: italic;
         font-weight: 300;
@@ -205,9 +206,18 @@ console.log("props",Astro.props)
 
         display: flex;
         width: 7.29169rem;
-        padding-block: 0.52081rem;
         justify-content: center;
         align-items: center;
+    }
+
+    @media (max-width: 1024px) {
+        .type p {
+            left: 0px;
+        }
+
+        .kunstner h3 {
+            left: 0px;
+        }
     }
 
     @media (max-width: 430px){
@@ -215,60 +225,59 @@ console.log("props",Astro.props)
         width: 15rem; 
         height: 24rem;
     }
-
     .hvem{
         height: 15rem;
     }
-
     .kunstner {
         width: 13.33331rem;
-        height: 16.33331rem;
-       
+        height: 16.33331rem;  
     }
-
     .kunstner h3 {
         width: 11rem;
         height: 3rem;
-        left: 0px;
+        left: -5px;
         bottom: 20px; 
     }
-
     h3{
         font-size: 0.83313rem;
     }
     .type p {
         font-size: 0.57813rem;
-        left: 0px;
+        left: -5px;
         bottom: -5px;
-
     }
-
     .information {
         width: 12.75rem;
         gap: 1.33713rem;
     }
-
     .price {
         width: 4.86113rem;
         padding: 0.34725rem;
         gap: 1.31944rem;
     }
-
     .large {
         display: none;
     }
-
     .small {
         display: flex;
         justify-content: center;
     }
-
     .knap {
         gap: 1.125rem;
         width: auto;
         padding: 0.625rem;
     }
-
+    .faatilbage .tilbage {
+        font-size: var(--Label-small);
+        width: 100%;
     }
+
+    .udsolgt .tekst {
+        font-size: 2rem;
+        top: 25%;
+        left: 15%;
+    }
+}
+
 
 </style>
