--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -64,7 +64,7 @@ import Sti from "../components/Sti.astro";
     flex-wrap: wrap;
 		column-gap: var(--gap6);
     row-gap: var(--gap7);
-		justify-content: flex-start;
+		justify-content: space-evenly;
     padding-block: var(--gap7);
 	}
 
@@ -126,7 +126,7 @@ import Sti from "../components/Sti.astro";
         outline-width: 2px;
     }
 
-    @media (min-width: 1513px){
+    /* @media (min-width: 1513px){
       .artister {
         column-gap: var(--gap11);
       }
@@ -136,7 +136,7 @@ import Sti from "../components/Sti.astro";
       .artister {
         column-gap: var(--gap11);
       }
-}
+} */
 
     @media (max-width: 1024px) {
       article {
