--- a/src/components/SocialIcon.astro
+++ b/src/components/SocialIcon.astro
@@ -1,6 +1,6 @@
 <article class="social-links">
-    <a href="#" aria-label="Følg link til Facebook"> <i class="fa-brands fa-facebook"></i></a>
-    <a class="ig" href="#" aria-label="Følg link til instagram"><i class="fa-brands fa-instagram"></i></a>
+    <a href="https://www.facebook.com/Kanonproduktion.dk/?locale=da_DK" aria-label="Følg link til Facebook"> <i class="fa-brands fa-facebook"></i></a>
+    <a class="ig" href="https://www.instagram.com/kanonproduktion/" aria-label="Følg link til instagram"><i class="fa-brands fa-instagram"></i></a>
 
 </article>
 
