--- a/src/pages/artister.astro
+++ b/src/pages/artister.astro
@@ -64,7 +64,7 @@ import Sti from "../components/Sti.astro";
     flex-wrap: wrap;
 		column-gap: var(--gap6);
     row-gap: var(--gap7);
-		justify-content: space-evenly;
+		justify-content: space-between;
     padding-block: var(--gap7);
 	}
 
