--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -140,7 +140,31 @@ import Button from "../components/Button.astro";
 		trigger: ".hero",
 		start: "100 start",
 		end: "1000 center",
-		markers: true,
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+	gsap.from(".kommende_events", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".cta",
+		start: "100 start",
+		end: "1000 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+	gsap.from(".andre_siger", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".kommende_events",
+		start: "100 start",
+		end: "1000 center",
+		// markers: true,
 	},
 	opacity:0,
 	duration:0.5,
