gsap + media på booking

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -31,7 +31,7 @@ import Logo from "./Logo.astro"
       top: 0;
       width: 100%;
       background-color: var(--color-background-nav);
-      padding-block: 20px;
+      padding-top: 20px;
       z-index: 4;
       gap: var(--gap8);
 
@@ -45,7 +45,7 @@ import Logo from "./Logo.astro"
       height: 100%;
       width: 100%;
     }
-
+/* 
     .sticky {
       position: sticky;
       top: 0;
@@ -54,7 +54,7 @@ import Logo from "./Logo.astro"
 
     .sticky .logo {
       display: none;
-    } 
+    }  */
 
     a {
       text-decoration: none;
@@ -190,7 +190,7 @@ import Logo from "./Logo.astro"
     }
   }
 
-  @media (max-width: 390px) {
+  @media (max-width: 430px) {
     .banner {
       padding: var(--gap5) var(--gap4);
     }
