--- a/src/pages/booking.astro
+++ b/src/pages/booking.astro
@@ -30,7 +30,7 @@ import Button from "../components/Button.astro";
 </section>
 <section class="faq">
     <h2>Faq</h2>
-    <article>
+    <article class="FAQ">
     <Faq></Faq>
 </article>
 </section>
@@ -47,6 +47,130 @@ import Button from "../components/Button.astro";
     </article>
   </section>
 </MainLayout>
+
+<script>
+	import { gsap } from "gsap";
+    
+	import { ScrollTrigger } from "gsap/ScrollTrigger";
+
+  //Web + iPad
+  // create
+  let mm = gsap.matchMedia();
+
+  // add a media query. When it matches, the associated function will run
+  mm.add("(min-width: 431px)", () => {
+	
+	gsap.registerPlugin(ScrollTrigger);
+	
+	gsap.from(".booking", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".booking",
+		start: "-300 start",
+		end: "500 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+  gsap.from(".faq", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".button",
+		start: "-600 start",
+		end: "500 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+  gsap.from(".testimonials", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".faq",
+		start: "300 start",
+		end: "1200 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	});  
+
+  gsap.from(".kontakt", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".testimonials",
+		start: "-200 start",
+		end: "1000 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+});
+
+  //iPhone
+  // create
+  let sm = gsap.matchMedia();
+
+  // add a media query. When it matches, the associated function will run
+  sm.add("(max-width: 430px)", () => {
+	
+	gsap.registerPlugin(ScrollTrigger);
+	
+	gsap.from(".booking", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".booking",
+		start: "-100 start",
+		end: "800 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+  gsap.from(".faq", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".button",
+		start: "-500 start",
+		end: "500 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+  gsap.from(".testimonials", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".faq",
+		start: "200 start",
+		end: "1200 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	});  
+
+  gsap.from(".kontakt", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".testimonials",
+		start: "-100 start",
+		end: "1000 center",
+		// markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+});
+</script>
 
 <style>
   	article{
