--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -132,7 +132,13 @@ import Button from "../components/Button.astro";
     
 	import { ScrollTrigger } from "gsap/ScrollTrigger";
 	
-	
+	 //Web + iPad
+  // create
+  let mm = gsap.matchMedia();
+
+  // add a media query. When it matches, the associated function will run
+  mm.add("(min-width: 431px)", () => {
+
 	gsap.registerPlugin(ScrollTrigger);
 	
 	gsap.from(".cta", {
@@ -140,10 +146,10 @@ import Button from "../components/Button.astro";
 		scrub: true,
 		trigger: ".hero",
 		start: "100 start",
-		end: "600 center",
+		end: "1000 center",
 		 //markers: true,
 	},
-	opacity:0.4,
+	opacity:0,
 	duration:0.5,
 	}); 
 
@@ -170,6 +176,56 @@ import Button from "../components/Button.astro";
 	opacity:0,
 	duration:0.5,
 	}); 
+
+});
+
+//iPhone
+  // create
+  let sm = gsap.matchMedia();
+
+  // add a media query. When it matches, the associated function will run
+  sm.add("(max-width: 430px)", () => {
+	
+	gsap.registerPlugin(ScrollTrigger);
+	
+	gsap.from(".cta", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".hero",
+		start: "-100 start",
+		end: "600 center",
+		 //markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+
+	gsap.from(".kommende_events", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".cta",
+		start: "100 start",
+		end: "1000 center",
+		//markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+	gsap.from(".andre_siger", {
+	scrollTrigger: {
+		scrub: true,
+		trigger: ".kommende_events",
+		start: "0 start",
+		end: "1000 center",
+		//markers: true,
+	},
+	opacity:0,
+	duration:0.5,
+	}); 
+
+});
 
 </script>
 
