--- a/src/pages/tidligere.astro
+++ b/src/pages/tidligere.astro
@@ -116,7 +116,7 @@ mm.add("(min-width: 431px)", () => {
       trigger: ".logo",
       start: "-100 start",
       end: "1000 center",
-      markers: true,
+      //markers: true,
     },
     opacity:0,
     duration:0.5,
@@ -128,7 +128,7 @@ mm.add("(min-width: 431px)", () => {
       trigger: ".menu",
       start: "-100 start",
       end: "1000 center",
-      markers: true,
+     // markers: true,
     },
     opacity:0,
     duration:0.5,
