--- a/src/components/TidligereCard.astro
+++ b/src/components/TidligereCard.astro
@@ -108,18 +108,19 @@ height: 12rem;
     .kunstner {
  width: 8.9375rem;
 height: 8rem;
+padding-top: 0.4rem;
        
     }
 
     .kunstner h3 {
         width: 10rem;
-        height: 3rem;
+        height: 2.2rem;
         left: -10px;
         bottom: 0px; 
     }
 
     h3{
-        font-size: 1rem;
+        font-size: 0.8rem;
     }
     .type p {
         font-size: 0.5rem;
